--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ body {
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
+    background-color: #14793e;
     color: #ffffff;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #000000;
 }
 
 .header div {
@@ -84,7 +84,8 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #14793e;
+    ;
 }
 
 .benefit-lead,.benefit-brand,.benefit-cost {
@@ -122,7 +123,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: #14793e;
     color: #ffffff;
 }
 
@@ -131,7 +132,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: #14793e;
     color: #ffffff;
 }
 
@@ -140,7 +141,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: #14793e;
     color: #ffffff;
 }
 
